--- a/index.html
+++ b/index.html
@@ -16,25 +16,28 @@
 
       <div class="container">
 
+        <h1>Twitter Search</h1>
+
         <form class="form-horizontal">
           <div class="form-group">
-            <label for="search" class="col-sm-2 control-label">Password</label>
+            <label for="search" class="col-sm-2 control-label">Search Term</label>
             <div class="col-sm-10">
               <input type="search" id="search" class="form-control" placeholder="Search term">
             </div>
           </div>
 
           <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-primary">Search Twitter</button>
+            <div class="col-xs-12 text-right">
+              <button type="button" id="dotwitter" class="btn btn-primary">Search Twitter</button>
             </div>
           </div>
         </form>
 
+        <h2>Results</h2>
 
         <ul class="list-group" id="tweets">
           
-          <!-- <li class="list-group-item row tweet">
+          <li class="list-group-item row tweet">
             
             <div class="col-sm-2">
               <img src="http://lorempixel.com/200/200/" class="img-responsive tweet-img">
@@ -45,7 +48,7 @@
               <p class="h1 tweet-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               <p class="h3 text-right tweet-date">10 mins ago</p>
             </div>
-          </li> -->
+          </li>
 
 
         </ul>
