--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           
           <li class="list-group-item row tweet">
             
-            <div class="col-sm-2">
+            <div class="col-sm-2 user">
               <img src="http://lorempixel.com/200/200/" class="img-responsive tweet-img">
               <p class="h4 tweet-name">@whatever</p>
             </div>
 
-            <div class="col-sm-10">
+            <div class="col-sm-10 text">
               <p class="h1 tweet-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               <p class="h3 text-right tweet-date">10 mins ago</p>
             </div>
