--- a/index.html
+++ b/index.html
@@ -36,21 +36,6 @@
         <h2>Results</h2>
 
         <ul class="list-group" id="tweets">
-          
-          <li class="list-group-item row tweet">
-            
-            <div class="col-sm-2 user">
-              <img src="http://lorempixel.com/200/200/" class="img-responsive tweet-img">
-              <p class="h4 tweet-name">@whatever</p>
-            </div>
-
-            <div class="col-sm-10 text">
-              <p class="h1 tweet-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-              <p class="h3 text-right tweet-date">10 mins ago</p>
-            </div>
-          </li>
-
-
         </ul>
 
 
@@ -60,6 +45,7 @@
       <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
       <script>window.jQuery || document.write('<script src="javascripts/jquery-1.11.2.min.js"><\/script>')</script>
       <script src="javascripts/bootstrap.min.js"></script>
+      <script src="javascripts/jquery.timeago.js"></script>
       <script src="javascripts/scripts.js"></script>
     </body>
 </html>
